# Box

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/scripts/: smoke_test.sh
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/proxymax/: MainActivity.kt
app/src/main/java/com/proxymax/app/: MainActivity.kt  ProxyMaxApp.kt
app/src/main/java/com/proxymax/core/: CoreEngine.kt  CoreManager.kt  MihomoEngine.kt  SingboxEngine.kt  XrayEngine.kt
app/src/main/java/com/proxymax/core/stats/: ClashApiClient.kt  StatsCollector.kt
app/src/main/java/com/proxymax/data/converter/: ConfigConverter.kt
app/src/main/java/com/proxymax/data/model/: AppSettings.kt  PerAppMode.kt  ProxyProfile.kt
app/src/main/java/com/proxymax/di/: AppModule.kt
app/src/main/java/com/proxymax/service/: BootReceiver.kt  ProxyTileService.kt  ProxyVpnService.kt
app/src/main/java/com/proxymax/ui/: ProxyMaxNavHost.kt
app/src/main/java/com/proxymax/workers/: AutoUpdateWorker.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: widget_proxy.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml  proxy_widget_info.xml
cmake/: Android.mk  CMakeLists.txt
gradle/: libs.versions.toml
jni/cpp/singbox/: singbox_bridge.cpp
jni/include/: core_bridge.h
scripts/: place_libs.sh
(+19 files in other folders)
